2006-03-29	Richard van den Berg  <richard@vdberg.org>
	* Add spaces to error messages (Marc Haber)

2006-03-25	Richard van den Berg  <richard@vdberg.org>
	* Allow aide.db to be supplied on stdin (Pablo Virolainen)
	* Add patch to allow http/https/ftp URLs through libcurl (Pablo Virolainen)

2006-03-17	Richard van den Berg  <richard@vdberg.org>
	* Use system strnstr when available
	* Add --disable-static flag to configure

2006-03-13	Richard van den Berg  <richard@vdberg.org>
	* Applied manual patch from Marc Haber
	* Added note about problems with mhash 0.9.x

2006-03-12	Richard van den Berg  <richard@vdberg.org>
	* Mordernize use of AM_INIT_AUTOMAKE
	* Use AIDEVERSION to avoid clash with VERSION of other packages

2006-02-26	Richard van den Berg  <richard@vdberg.org>
	* Use @sysconfdir@ as directory in aide.1, SF bug #1438995

2006-02-23	Richard van den Berg  <richard@vdberg.org>
	* Set AIDEVERSION right after including config.h
	* Added note about SIGTERM (Marc Haber)

2006-02-18	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.11
	* Changed version to post-0.11

2006-02-14	Richard van den Berg  <richard@vdberg.org>
	* Fix the broken @@ifhost and @@ifnhost directives by lcn2 (SF bug #1430482)

2006-02-09	Richard van den Berg  <richard@vdberg.org>
	* Fall back to strtoimax if strtoll is not available
	* Protect against non existing syslog facilities
	* Updated aide.spec.in as suggested in SF bug #1428576

2006-02-08	Richard van den Berg  <richard@vdberg.org>
	* Explicitly check for readdir64, by Virolainen Pablo <pablo@cs.tut.fi>
	* Added note about --disable-lfs in README

2006-01-30	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.11-rc3
	* Changed version to post-0.11-rc3

2006-01-29	Richard van den Berg  <richard@vdberg.org>
	* Fix layout of aide.conf.5 by Vincent Danen <vdanen@linsec.ca>
	* Cleanup --help output by Vincent Danen <vdanen@linsec.ca>
	* Add separators in --check output by Vincent Danen <vdanen@linsec.ca>